--- a/hobbies.html
+++ b/hobbies.html
@@ -4,30 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>skills</title>
+    <title>Hobbies</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <h1 class="h1"> NEVEEN AL-OMARI</h1>
     <h2 class="h2"> Electronics Engineer</h2>
     <ul class="button">
-        <li class="li"><a href="skills.html" class="active">Skills</a></li>
+        <li class="li"><a href="skills.html">Skills</a></li>
         <li class="li"><a href="courses.html" > Courses</a></li>
-        <li class="li"><a href="hobbies.html" > Hobbies</a></li>
+        <li class="li"><a href="hobbies.html" class="active" > Hobbies</a></li>
     </ul>
 <body style="background-color: rgb(246, 247, 248);">
-    <h1>Personal Skills:</h1>
+    <h1>Hobbies:</h1>
     <ul class="text">
-        <li> communication skills.</li>
-        <li>work under pressure.</li>
-        <li>problem sloving.</li>
-        <li>creativity.</li>
+        <li> community inolvement.</li>
+         <li> learning languages.</li>   
+         <li>reading.</li>
     </ul>
-    <h1>Hard Skills:</h1>
-    <ul class="text">
-        <li>Coding.</li>
-        <li>engineering.</li>
-        <li>programming languages such as(python,java).</li>
-    </ul>
-
 </body>
 </html>
